# LotteryBot

./: CMakeLists.txt  README.md
sources/: dataBase.db  lottery.h  main.cpp  telegramBot.cpp  telegramBot.h
sources/dataBaseTools/: dataBase.cpp  dataBase.h
sources/lotteryLogic/: lottery.cpp  lottery.h
sources/telegramBotLogic/: botText.h  telegramBot.cpp  telegramBot.h
